// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`registry build snapshots > matches snapshot for multi-dependency component (data-table) 1`] = `
{
  "category": "data-display",
  "dependencies": [
    "reka-ui",
    "@lucide/vue",
  ],
  "fileCount": 15,
  "files": [
    {
      "path": "components/ui/data-table/DataTable.vue",
      "type": "registry:ui",
    },
    {
      "path": "components/ui/data-table/DataTableColumnFilter.vue",
      "type": "registry:ui",
    },
    {
      "path": "components/ui/data-table/data-table-variants.ts",
      "type": "registry:lib",
    },
    {
      "path": "components/ui/data-table/types.ts",
      "type": "registry:lib",
    },
    {
      "path": "components/ui/data-table/index.ts",
      "type": "registry:ui",
    },
    {
      "path": "composables/useDataTableFilter.ts",
      "type": "registry:hook",
    },
    {
      "path": "composables/useDataTablePagination.ts",
      "type": "registry:hook",
    },
    {
      "path": "composables/useDataTableSelection.ts",
      "type": "registry:hook",
    },
    {
      "path": "composables/useDataTableSort.ts",
      "type": "registry:hook",
    },
    {
      "path": "composables/useLocale.ts",
      "type": "registry:hook",
    },
    {
      "path": "lib/defaults.ts",
      "type": "registry:lib",
    },
    {
      "path": "lib/data-table-utils.ts",
      "type": "registry:lib",
    },
    {
      "path": "lib/brutal-interaction-variants.ts",
      "type": "registry:lib",
    },
    {
      "path": "lib/date.ts",
      "type": "registry:lib",
    },
    {
      "path": "lib/env.ts",
      "type": "registry:lib",
    },
  ],
  "integrity": "sha256-fb3f53e323eae92ee1fcbe95aa867844a2ef22d2574f3d383788abd26f5eb9cc",
  "name": "data-table",
  "registryDependencies": [
    "input",
    "button",
    "checkbox",
    "select",
    "virtual-scroll",
    "popover",
    "locale-zh-cn",
  ],
  "replacement": undefined,
  "status": undefined,
  "title": "Data Table",
  "type": "registry:ui",
}
`;

exports[`registry build snapshots > matches snapshot for simple component (button) 1`] = `
{
  "category": "action",
  "dependencies": [
    "reka-ui",
    "@lucide/vue",
  ],
  "fileCount": 11,
  "files": [
    {
      "path": "components/ui/button/Button.vue",
      "type": "registry:ui",
    },
    {
      "path": "components/ui/button/button-variants.ts",
      "type": "registry:lib",
    },
    {
      "path": "components/ui/button/shared-button-variants.ts",
      "type": "registry:lib",
    },
    {
      "path": "components/ui/button/index.ts",
      "type": "registry:ui",
    },
    {
      "path": "composables/useGlitchEffect.ts",
      "type": "registry:hook",
    },
    {
      "path": "composables/useLocale.ts",
      "type": "registry:hook",
    },
    {
      "path": "composables/useReducedMotion.ts",
      "type": "registry:hook",
    },
    {
      "path": "lib/icon-size-variants.ts",
      "type": "registry:lib",
    },
    {
      "path": "lib/defaults.ts",
      "type": "registry:lib",
    },
    {
      "path": "lib/brutal-interaction-variants.ts",
      "type": "registry:lib",
    },
    {
      "path": "lib/env.ts",
      "type": "registry:lib",
    },
  ],
  "integrity": "sha256-1cbbf519f00575ce03881d5f476658c9841b988d92ea60a3beb15cc34464c6e7",
  "name": "button",
  "registryDependencies": [
    "locale-zh-cn",
  ],
  "replacement": undefined,
  "status": undefined,
  "title": "Button",
  "type": "registry:ui",
}
`;
